Prevent yellow buttons from covering green buttons

--- a/CRMS Extension/style.css
+++ b/CRMS Extension/style.css
@@ -287,6 +287,20 @@ div.float-right{
   padding-left: 15px;
 }
 
+.helper-control-panel-parent{
+  position: sticky;
+  top: 90px !important;
+}
+
+.quick-function-section{
+	position: absolute;
+	top: 126px !important;
+}
+
+#opportunity_item_header_sticky{
+	top: 300px !important;
+}
+
 .quantity-column{
   display: table-cell !important;
 }
